--- a/Privacy_Policy.html
+++ b/Privacy_Policy.html
@@ -8,8 +8,8 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                  Emilian Kasemi built the Piktori i Vogel  app as
-                  an Ad Supported app. This SERVICE is provided by
+                  Emilian Kasemi built the Piktori i Vogel app as
+                  a Free app. This SERVICE is provided by
                   Emilian Kasemi at no cost and is intended for use as
                   is.
                 </p> <p>
@@ -25,7 +25,7 @@
                 </p> <p>
                   The terms used in this Privacy Policy have the same meanings
                   as in our Terms and Conditions, which is accessible at
-                  Piktori i Vogel  unless otherwise defined in this Privacy Policy.
+                  Piktori i Vogel unless otherwise defined in this Privacy Policy.
                 </p> <p><strong>Information Collection and Use</strong></p> <p>
                   For a better experience, while using our Service, I
                   may require you to provide us with certain personally
@@ -103,8 +103,8 @@
                   this page.
                 </p> <p>This policy is effective as of 2020-07-14</p> <p><strong>Contact Us</strong></p> <p>
                   If you have any questions or suggestions about my
-                  Privacy Policy, do not hesitate to contact me at <strong>emiliankasemi@gmail.com.</strong>
-                </p> 
+                  Privacy Policy, do not hesitate to contact me at emiliankasemi@gmail.com.
+                </p>
     </body>
     </html>
       
