--- a/Privacy_Policy.html
+++ b/Privacy_Policy.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                  Emilian Kasemi built the Piktori i Vogel app as
+                  Emilian Kasemi built the 'Piktori i vogel' app as
                   a Free app. This SERVICE is provided by
                   Emilian Kasemi at no cost and is intended for use as
                   is.
@@ -22,11 +22,8 @@
                   policy. The Personal Information that I collect is
                   used for providing and improving the Service. I will not use or share your information with
                   anyone except as described in this Privacy Policy.
-                </p> <p>
-                  The terms used in this Privacy Policy have the same meanings
-                  as in our Terms and Conditions, which is accessible at
-                  Piktori i Vogel unless otherwise defined in this Privacy Policy.
-                </p> <p><strong>Information Collection and Use</strong></p> <p>
+                </p> 
+                <p><strong>Information Collection and Use</strong></p> <p>
                   For a better experience, while using our Service, I
                   may require you to provide us with certain personally
                   identifiable information, including but not limited to data. The information that
@@ -37,7 +34,7 @@
                   </p> <p>
                     Link to privacy policy of third party service providers used
                     by the app
-                  </p> <ul><li><a href="https://www.google.com/policies/privacy/" target="_blank" rel="noopener noreferrer">Google Play Services</a></li><li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank" rel="noopener noreferrer">AdMob</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><li><a href="https://unity3d.com/legal/privacy-policy" target="_blank" rel="noopener noreferrer">Unity</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> <p><strong>Log Data</strong></p> <p>
+                  </p> <ul><li><a href="https://www.google.com/policies/privacy/" target="_blank" rel="noopener noreferrer">Google Play Services</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><li><a href="https://unity3d.com/legal/privacy-policy" target="_blank" rel="noopener noreferrer">Unity</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> <p><strong>Log Data</strong></p> <p>
                   I want to inform you that whenever you
                   use my Service, in a case of an error in the app
                   I collect data and information (through third party
@@ -104,7 +101,7 @@
                 </p> <p>This policy is effective as of 2020-07-14</p> <p><strong>Contact Us</strong></p> <p>
                   If you have any questions or suggestions about my
                   Privacy Policy, do not hesitate to contact me at emiliankasemi@gmail.com.
-                </p>
+                </p> 
     </body>
     </html>
       
